[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=1]

[node name="PauseControl" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.160784, 0.14902, 0.14902, 0.745098 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 918.0
margin_top = 477.0
margin_right = 1001.0
margin_bottom = 603.0
custom_constants/separation = 8

[node name="PauseLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 83.0
margin_bottom = 14.0
text = "Paused"
align = 1

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 83.0
margin_bottom = 42.0
text = "Resume"

[node name="OptionsButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 83.0
margin_bottom = 70.0
text = "Options"

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 83.0
margin_bottom = 98.0
text = "Main Menu"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 83.0
margin_bottom = 126.0
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
